2005-07-29  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen-types.rb
	  CodeGen/templates/MetadataTableWriter.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Preliminary work on assembly writing

2005-07-28  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Implem/StructureWriter.cs
		Preliminary work on assembly writing

	* Mono.Cecil/IMetadataTokenProvider.cs
	  Mono.Cecil/IMember.cs
	  Mono.Cecil/IParameter.cs:
		Add a MetadataToken property on searchable items
	* Mono.Cecil.Metadata/MetadataToken.cs:
		Add a factory method to create token from row number
	* Mono.Cecil.Implem/TypeReference.cs
	  Mono.Cecil.Implem/MemberReference.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs:
		Implement the token property
	* Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/AggressiveReflectionReader.cs
	  Mono.Cecil.Implem/LazyReflectionReader.cs:
		Set the token property on reading
	* Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil.Implem/ModuleDefinition.cs
	  Mono.Cecil.Implem/ReflectionReader.cs:
		Add methods to lookup items from their tokens 

2005-07-27  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/OpCodes.cs
	  Mono.Cecil.Cil/OpCodes.cs
	  Mono.Cecil.Cil/OpCode.cs:
		Changes to reduce the size of the cache ctor

2005-07-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (MCS): Allow compiler to be overriden.

2005-07-21  Todd Berman  <tberman@off.net>

	* configure: Add a small stub configure (stolen from mcs) to set the
	prefix.
	* mono-cecil.pc.in: Add a mono-cecil.pc.in to allow for installation
	according to the new "Libraries with Unstable API" Wiki documentation.
	* Makefile: Add an install an a mono-cecil.pc target to allow for
	installation and creation of the pc file.
