@@ -1,9 +1,14 @@
-# /cecil/lib/ruby CodeGen/cecil-gen-sources.dll > Mono.Cecil.dll.sources
+#!/usr/bin/env ruby
+
+f = File.new("../Mono.Cecil.dll.sources", File::CREAT|File::WRONLY)
+
 [ "Mono.Cecil", "Mono.Cecil.Binary",
 	"Mono.Cecil.Metadata", "Mono.Cecil.Cil",
 	"Mono.Cecil.Implem", "Mono.Cecil.Signatures", "Mono.Xml" ].each { |dir|
-
-	Dir.foreach(dir) { |file|
-		$stdout.print("./#{dir}/#{file}\n") if file[(file.length - 3)..file.length] == ".cs"
+	
+	Dir.foreach("../" + dir) { |file|
+		f.print("./#{dir}/#{file}\n") if file[(file.length - 3)..file.length] == ".cs"
 	}
 }
+
+f.close
