@@ -1,4 +1,4 @@
-
+#!/usr/bin/env ruby
 # extern libraries used by code generator
 
 require 'eruby'
@@ -147,7 +147,7 @@ def cecil_compile(file, template)
 end
 
 [ "PEFileHeader.cs", "PEOptionalHeader.cs", "Section.cs",
-  "CLIHeader.cs", "ImageReader.cs" ].each { |file|
+  "CLIHeader.cs", "ImageReader.cs", "ImageWriter.cs" ].each { |file|
 	cecil_compile(fullpath = "../Mono.Cecil.Binary/" + file, "./templates/" + file)
 }
 
