@@ -1,0 +1,215 @@
+/*
+ * Copyright (c) 2004, 2005 DotNetGuru and the individuals listed
+ * on the ChangeLog entries.
+ *
+ * Authors :
+ *   Jb Evain   (jbevain@gmail.com)
+ *
+ * This is a free software distributed under a MIT/X11 license
+ * See LICENSE.MIT file for more details
+ *
+ * Generated by /CodeGen/cecil-gen.rb do not edit
+ * Sat Jul 30 10:37:35 CEST 2005
+ *
+ *****************************************************************************/
+
+namespace Mono.Cecil.Binary {
+
+	using System;
+	using System.IO;
+	using System.Text;
+
+	using Mono.Cecil;
+	using Mono.Cecil.Metadata;
+
+	internal sealed class ImageWriter : IBinaryVisitor {
+
+		private BinaryWriter m_binaryWriter;
+
+		public ImageWriter (MetadataWriter writer)
+		{
+			m_binaryWriter = writer.GetWriter ();
+		}
+
+		public void Visit (Image img)
+		{
+		}
+
+		public void Visit (DOSHeader header)
+		{
+			m_binaryWriter.Write (header.Start);
+			m_binaryWriter.Write (header.Lfanew);
+			m_binaryWriter.Write (header.End);
+			
+			m_binaryWriter.Write ((ushort) 0x4550);
+			m_binaryWriter.Write ((ushort) 0);
+		}
+
+		public void Visit (PEOptionalHeader header)
+		{
+		}
+
+		public void Visit (PEFileHeader header)
+		{
+			m_binaryWriter.Write (header.Machine);
+			m_binaryWriter.Write (header.NumberOfSections);
+			m_binaryWriter.Write (header.TimeDateStamp);
+			m_binaryWriter.Write (header.PointerToSymbolTable);
+			m_binaryWriter.Write (header.NumberOfSymbols);
+			m_binaryWriter.Write (header.OptionalHeaderSize);
+			m_binaryWriter.Write ((ushort) header.Characteristics);
+		}
+
+		public void Visit (PEOptionalHeader.NTSpecificFieldsHeader header)
+		{
+			m_binaryWriter.Write (header.ImageBase);
+			m_binaryWriter.Write (header.SectionAlignment);
+			m_binaryWriter.Write (header.FileAlignment);
+			m_binaryWriter.Write (header.OSMajor);
+			m_binaryWriter.Write (header.OSMinor);
+			m_binaryWriter.Write (header.UserMajor);
+			m_binaryWriter.Write (header.UserMinor);
+			m_binaryWriter.Write (header.SubSysMajor);
+			m_binaryWriter.Write (header.SubSysMinor);
+			m_binaryWriter.Write (header.Reserved);
+			m_binaryWriter.Write (header.ImageSize);
+			m_binaryWriter.Write (header.HeaderSize);
+			m_binaryWriter.Write (header.FileChecksum);
+			m_binaryWriter.Write ((ushort) header.SubSystem);
+			m_binaryWriter.Write (header.DLLFlags);
+			m_binaryWriter.Write (header.StackReserveSize);
+			m_binaryWriter.Write (header.StackCommitSize);
+			m_binaryWriter.Write (header.HeapReserveSize);
+			m_binaryWriter.Write (header.HeapCommitSize);
+			m_binaryWriter.Write (header.LoaderFlags);
+			m_binaryWriter.Write (header.NumberOfDataDir);
+		}
+
+		public void Visit (PEOptionalHeader.StandardFieldsHeader header)
+		{
+			m_binaryWriter.Write (header.Magic);
+			m_binaryWriter.Write (header.LMajor);
+			m_binaryWriter.Write (header.LMinor);
+			m_binaryWriter.Write (header.CodeSize);
+			m_binaryWriter.Write (header.InitializedDataSize);
+			m_binaryWriter.Write (header.UninitializedDataSize);
+			m_binaryWriter.Write (header.EntryPointRVA.Value);
+			m_binaryWriter.Write (header.BaseOfCode.Value);
+			m_binaryWriter.Write (header.BaseOfData.Value);
+		}
+
+		public void Visit (PEOptionalHeader.DataDirectoriesHeader header)
+		{
+			m_binaryWriter.Write (header.ExportTable.VirtualAddress);
+			m_binaryWriter.Write (header.ExportTable.Size);
+			m_binaryWriter.Write (header.ImportTable.VirtualAddress);
+			m_binaryWriter.Write (header.ImportTable.Size);
+			m_binaryWriter.Write (header.ResourceTable.VirtualAddress);
+			m_binaryWriter.Write (header.ResourceTable.Size);
+			m_binaryWriter.Write (header.ExceptionTable.VirtualAddress);
+			m_binaryWriter.Write (header.ExceptionTable.Size);
+			m_binaryWriter.Write (header.CertificateTable.VirtualAddress);
+			m_binaryWriter.Write (header.CertificateTable.Size);
+			m_binaryWriter.Write (header.BaseRelocationTable.VirtualAddress);
+			m_binaryWriter.Write (header.BaseRelocationTable.Size);
+			m_binaryWriter.Write (header.Debug.VirtualAddress);
+			m_binaryWriter.Write (header.Debug.Size);
+			m_binaryWriter.Write (header.Copyright.VirtualAddress);
+			m_binaryWriter.Write (header.Copyright.Size);
+			m_binaryWriter.Write (header.GlobalPtr.VirtualAddress);
+			m_binaryWriter.Write (header.GlobalPtr.Size);
+			m_binaryWriter.Write (header.TLSTable.VirtualAddress);
+			m_binaryWriter.Write (header.TLSTable.Size);
+			m_binaryWriter.Write (header.LoadConfigTable.VirtualAddress);
+			m_binaryWriter.Write (header.LoadConfigTable.Size);
+			m_binaryWriter.Write (header.BoundImport.VirtualAddress);
+			m_binaryWriter.Write (header.BoundImport.Size);
+			m_binaryWriter.Write (header.IAT.VirtualAddress);
+			m_binaryWriter.Write (header.IAT.Size);
+			m_binaryWriter.Write (header.DelayImportDescriptor.VirtualAddress);
+			m_binaryWriter.Write (header.DelayImportDescriptor.Size);
+			m_binaryWriter.Write (header.CLIHeader.VirtualAddress);
+			m_binaryWriter.Write (header.CLIHeader.Size);
+			m_binaryWriter.Write (header.Reserved.VirtualAddress);
+			m_binaryWriter.Write (header.Reserved.Size);
+		}
+
+		public void Visit (SectionCollection coll)
+		{
+		}
+
+		public void Visit (Section sect)
+		{
+			foreach (char c in sect.Name)
+				m_binaryWriter.Write ((sbyte) c);
+			m_binaryWriter.Write ((sbyte) '\0');
+
+			m_binaryWriter.Write (sect.VirtualSize);
+			m_binaryWriter.Write (sect.VirtualAddress.Value);
+			m_binaryWriter.Write (sect.SizeOfRawData);
+			m_binaryWriter.Write (sect.PointerToRawData.Value);
+			m_binaryWriter.Write (sect.PointerToRelocations.Value);
+			m_binaryWriter.Write (sect.PointerToLineNumbers.Value);
+			m_binaryWriter.Write (sect.NumberOfRelocations);
+			m_binaryWriter.Write (sect.NumberOfLineNumbers);
+			m_binaryWriter.Write ((uint) sect.Characteristics);
+		}
+
+		public void Visit (ImportAddressTable iat)
+		{
+			m_binaryWriter.Write (iat.HintNameTableRVA.Value);
+		}
+
+		public void Visit (CLIHeader header)
+		{
+			m_binaryWriter.Write (header.Cb);
+			m_binaryWriter.Write (header.MajorRuntimeVersion);
+			m_binaryWriter.Write (header.MinorRuntimeVersion);
+			m_binaryWriter.Write (header.Metadata.VirtualAddress);
+			m_binaryWriter.Write (header.Metadata.Size);
+			m_binaryWriter.Write ((uint) header.Flags);
+			m_binaryWriter.Write (header.EntryPointToken);
+			m_binaryWriter.Write (header.Resources.VirtualAddress);
+			m_binaryWriter.Write (header.Resources.Size);
+			m_binaryWriter.Write (header.StrongNameSignature.VirtualAddress);
+			m_binaryWriter.Write (header.StrongNameSignature.Size);
+			m_binaryWriter.Write (header.CodeManagerTable.VirtualAddress);
+			m_binaryWriter.Write (header.CodeManagerTable.Size);
+			m_binaryWriter.Write (header.VTableFixups.VirtualAddress);
+			m_binaryWriter.Write (header.VTableFixups.Size);
+			m_binaryWriter.Write (header.ExportAddressTableJumps.VirtualAddress);
+			m_binaryWriter.Write (header.ExportAddressTableJumps.Size);
+			m_binaryWriter.Write (header.ManagedNativeHeader.VirtualAddress);
+			m_binaryWriter.Write (header.ManagedNativeHeader.Size);
+		}
+
+		public void Visit (ImportTable it)
+		{
+			m_binaryWriter.Write (it.ImportAddressTable.Value);
+			m_binaryWriter.Write (it.DateTimeStamp);
+			m_binaryWriter.Write (it.ForwardChain);
+			m_binaryWriter.Write (it.Name.Value);
+			m_binaryWriter.Write (it.ImportAddressTable.Value);
+		}
+
+		public void Visit (ImportLookupTable ilt)
+		{
+			m_binaryWriter.Write (ilt.HintNameRVA.Value);
+		}
+
+		public void Visit (HintNameTable hnt)
+		{
+			m_binaryWriter.Write (hnt.Hint);
+			m_binaryWriter.Write (hnt.RuntimeMain);
+			m_binaryWriter.Write ('\0');
+			m_binaryWriter.Write (hnt.RuntimeLibrary);
+			m_binaryWriter.Write ('\0');
+
+			// ep + rva
+		}
+
+		public void Terminate (Image img)
+		{
+		}
+	}
+}
